deal with invalid readpixel format and type

BUG=629042
TESTCASE=conformance2/reading/read-pixels-from-fbo-test.html on mesa+i965 platform
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2158283002
Cr-Commit-Position: refs/heads/master@{#406547}

Former-commit-id: b1d177b84632df05a83e4c3edd340171f4e16324